<resources>
    <string name="app_name">ho7</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="ravno">=</string>
    <string name="product_category">Product Category</string>
    <string name="productcategory">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="policy">Policy</string>
    <string name="brand">Brand</string>
</resources>