<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Policie"
    android:background="@color/gray_light">


    <ImageView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/photo1669879838"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/photo"
        android:text="Policies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:textSize="20dp">

    </TextView>

    <EditText
        android:id="@+id/fisredit"
        android:layout_marginTop="15dp"
        android:layout_width="390dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/policies"
        app:layout_constraintStart_toStartOf="@id/policies"
        app:layout_constraintEnd_toEndOf="@id/policies"
        android:hint="@string/policy"
        android:backgroundTint="@color/dark_white"
        android:background="@color/dark_white"
        android:textStyle="bold">

    </EditText>
    <EditText
        android:id="@+id/secondedit"
        android:layout_width="390dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/fisredit"
        app:layout_constraintStart_toStartOf="@id/fisredit"
        app:layout_constraintEnd_toEndOf="@id/fisredit"
        android:hint="@string/productcategory"
        android:backgroundTint="@color/dark_white"
        android:background="@color/dark_white"
        android:textStyle="bold">

    </EditText>
    <EditText
        android:id="@+id/thirdedit"
        android:layout_width="390dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/secondedit"
        app:layout_constraintStart_toStartOf="@id/secondedit"
        app:layout_constraintEnd_toEndOf="@id/secondedit"
        android:hint="@string/origin_country"
        android:backgroundTint="@color/dark_white"
        android:background="@color/dark_white"
        android:textStyle="bold">

    </EditText>

    <EditText
        android:id="@+id/fourth"
        android:layout_width="390dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/thirdedit"
        app:layout_constraintStart_toStartOf="@id/thirdedit"
        app:layout_constraintEnd_toEndOf="@id/thirdedit"
        android:hint="@string/brand"
        android:backgroundTint="@color/dark_white"
        android:background="@color/dark_white"
        android:textStyle="bold">

    </EditText>

    <TextView
        android:id="@+id/CurrentPolicies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:text="Current Policies"
        android:textColor="@color/dark_blue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/fourth"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@id/fourth"
        app:layout_constraintTop_toBottomOf="@id/photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_red"
        android:text="Export as Csv"
        android:textSize="10sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@id/CurrentPolicies"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/CurrentPolicies"
        app:layout_constraintTop_toBottomOf="@id/CurrentPolicies">

    </com.google.android.material.button.MaterialButton>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/current"
        app:layout_constraintTop_toBottomOf="@id/button"
        tools:layout_editor_absoluteX="53dp" />

</androidx.constraintlayout.widget.ConstraintLayout>